<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/trend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/tending_topik"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@id/btn_move_activity"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="420dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="310dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="229dp"
        android:alpha="100"
        android:background="@drawable/_8_cute_desk_space_decor_to_have_for_yourself___atinydreamer"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/trend"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-2dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="121dp"
            android:layout_marginEnd="30dp"
            android:text="@string/asma"
            android:textAlignment="viewStart"
            android:textColor="#F8F6F6"
            android:textSize="40sp"
            tools:text="ASMA">

        </TextView>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:text="@string/asisten_mahasiswa_buatmu_bernafas_lega"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:typeface="sans" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="30dp"
            android:text="@string/menghadapi_ta"
            android:textAllCaps="false"
            android:textColor="#101010"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_move_activity"
        android:layout_width="258dp"
        android:layout_height="44dp"
        android:text="@string/kalo_rame_lanjut_part_2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="50dp">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>